--- a/expr/package.json
+++ b/expr/package.json
@@ -2,5 +2,9 @@
     "name": "expr"
   , "version": "0.0.1"
   , "scripts": { "start": "node server.js" }
-  , "dependencies": { "express": "3.1.x" }
+  ,"dependencies": {
+    "express": "3.1.1",
+    "jade": "*",
+    "stylus": "*"
+  }
 }
