Added testing framework

--- a/expr/Makefile
+++ b/expr/Makefile
@@ -7,4 +7,9 @@ test:
 		--reporter $(REPORTER) \
 		$(TESTS)
 
+test-cov: app-cov
+    @APP_COV=1 $(MAKE) --quiet test REPORTER=html-cov > coverage.html
+app-cov:
+    @jscoverage app app-cov
+    
 .PHONY: test
