--- a/expr2/package.json
+++ b/expr2/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "application-name"
+    "name": "expr2"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
+      "express": "3.0.x"
+    , "jade": "*"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
